css styles changes

--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -16,7 +16,7 @@ Search :<%=text_field_tag :datetimepicker, "",:class=>"form-control",:style=>"wi
 </script>
 
 <%if @appointments.present?%>
-<div class="continer">
+<div class="shadow-lg p-3 mb-5 bg-white rounded" style="margin-right: 15px;">
 <table class="table table-striped">
 	<thead>
 	    <tr>
