--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
  
 	<%form_tag :action => 'update' do %>
  	<% form_for :user, @users do |f| %>
-     <div class="shadow-lg p-3 mb-5 bg-white rounded">
+     <div class="shadow-lg p-3 mb-5 bg-white rounded" style="margin-right: 15px;">
      <table class="table bored">
      	<center><div class="hh2">Profile</div></center>
      <tr>
