--- a/app/views/patients/appointment_cancel.html.erb
+++ b/app/views/patients/appointment_cancel.html.erb
@@ -1,4 +1,5 @@
 <%if @appointments.present?%>
+<div class="shadow-lg p-3 mb-5 bg-white rounded" style="margin-right: 15px;">
 <table class="table table-striped">
 	<thead>
 	<tr>
@@ -21,9 +22,11 @@
 	  	<td><%=app.doctor.contact_no%></td>
 	  	<td><%=link_to 'Delete',patient_path(app.id),:method=>:delete%></td>
 	  	<%i+=1%>
+	  </tr>
 	  <%end%>
 	<%end%>
 </table>
+</div>
 <%else%>
 <div class="card">
   <div class="card-body">
