--- a/app/views/patients/prescription_list.html.erb
+++ b/app/views/patients/prescription_list.html.erb
@@ -1,4 +1,5 @@
 <%if @prescriptions.present?%>
+<div class="shadow-lg p-3 mb-5 bg-white rounded" style="margin-right: 15px;">
 <table class="table table-striped">
 	<thead>
 		<tr>
@@ -21,6 +22,7 @@
 	   <%i+=1%>
 	<% end -%>
 </table>
+</div>
 <%else%>
 <div class="card">
   <div class="card-body">
