--- a/app/views/users/doctor_list.html.erb
+++ b/app/views/users/doctor_list.html.erb
@@ -1,3 +1,4 @@
+<div class="shadow-lg p-3 mb-5 bg-white rounded" style="margin-right: 15px;">
 <table class="table table-striped">
     <thead>
       <tr>
@@ -19,3 +20,4 @@
       <%end%>     
   </tbody>
 </table>
+</div>
