--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -4,7 +4,8 @@
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Foradian</title>
+<title><%=insititution[0]%></title>
+<link rel="icon" href="<%=insititution[1]%>" type="image/icon type">
 <link rel="stylesheet" type="text/css" href="/boost/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
 <script src="/boost/jquery.min.js"></script>
