--- a/public/stylesheets/simple-sidebar.css
+++ b/public/stylesheets/simple-sidebar.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template-overviews/simple-sidebar)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/LICENSE)
- */
 body {
   overflow-x: hidden;
 }
@@ -83,18 +78,6 @@ body {
     margin-left: auto;
     margin: 10px;
 }
-./*jumbotron {
-    padding: 2rem 1rem;
-    margin-bottom: 2rem;
-    background-color: #e9ecef;
-    border-radius: .3rem;
-    margin-right: 10px;
-}*/
-.mb-5, .my-5 {
-    margin-bottom: 3rem!important;
-    margin-right: 15px;
-}
-
 .hh2 {
   text-shadow: 2px 2px 5px red;
 }
@@ -114,21 +97,9 @@ body {
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
-.custom-select {
-    display: inline-block;
-    width: 30%;
-    height: calc(1.5em + .75rem + 2px);
-    padding: .375rem 1.75rem .375rem .75rem;
-    font-size: 1rem;    
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    vertical-align: middle;
-    background: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e) no-repeat right .75rem center/8px 10px;
-    background-color: #fff;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+
+.table {
+    width: -webkit-fill-available;
+    margin-bottom: 1rem;
+    color: #212529;
 }
