cache and cookies setting

--- a/app/views/layouts/pdf.pdf.erb
+++ b/app/views/layouts/pdf.pdf.erb
@@ -17,7 +17,7 @@
       </head>
       <body onload='number_pages'>
         <div id="header">
-          <%= wicked_pdf_image_tag '<%=insititution[1]%>',:style=>"width: 65px;" %>
+          <%= wicked_pdf_image_tag '/logo.png',:style=>"width: 65px;" %>
         </div>
         <div id="content">
           <%= yield %>
