--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -12,7 +12,8 @@
 <script src="/boost/js/bootstrap.min.js"></script>
 
  </head>
-  <body>
+  <!-- <body noBack();" onpageshow="if (event.persisted) noBack();" onunload=""> -->
+  	<body>
   <% flash.each do |key, value| %>
     <%= content_tag :key, value,:style=>"text-align: center; font-size: 12px; color: red;"%>
   <% end %>
@@ -22,3 +23,7 @@
         <p>@2020kavikalai.All Right Reserved</p>
   </div>   
 </html>
+<!-- <script type="text/javascript">
+	window.history.forward();
+  function noBack() { window.history.forward(); }
+</script> -->
