--- a/app/views/users/_signin.html.erb
+++ b/app/views/users/_signin.html.erb
@@ -17,18 +17,15 @@
           </div>
           <div class="custom-control custom-radio custom-control-inline">
             <%=f.radio_button :type,'admin',:class=>"custom-control-input"%>
-           <!--  <input type="radio" class="custom-control-input" id="admin" name="type"> -->
             <label class="custom-control-label" for="user_type_admin">Admin</label>
           </div>
           <div class="custom-control custom-radio custom-control-inline">
             <%=f.radio_button :type,'doctor',:class=>"custom-control-input"%>
-<!--              <input type="radio" class="custom-control-input" id="doctor" name="type">
- -->              <label class="custom-control-label" for="user_type_doctor">Doctor</label>
+              <label class="custom-control-label" for="user_type_doctor">Doctor</label>
           </div>
           <div class="custom-control custom-radio custom-control-inline">
             <%=f.radio_button :type,'patient',:class=>"custom-control-input"%>
-<!--              <input type="radio" class="custom-control-input" id="patient" name="type">
- -->             <label class="custom-control-label" for="user_type_patient">Patient</label>
+              <label class="custom-control-label" for="user_type_patient">Patient</label>
           </div>
         </div>
         <div class="modal-footer">
@@ -38,68 +35,3 @@
       </div>
     </div>
 <%end%>
-
-
-
-
-
-
-<!-- # <% form_for :user, @users do |f| %>
-# <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-#   aria-hidden="true">
-#   <div class="modal-dialog">
-#     <div class="modal-content" style="background: #7394b7!important; border: 2px solid;">
-#       <div class="modal-header" style="text-align: center; background: #6a6abd;">
-#         <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
-#         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-#           <span aria-hidden="true">&times;</span>
-#         </button>
-#       </div>
-#         <div class="modal-body">
-#           <label>User Name:</label><%=f.text_field :user_name,:required => true%>
-
-#           Email Id:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%=f.text_field :email,:required => true%>
-      
-
-       
-#            Password:&nbsp&nbsp&nbsp&nbsp&nbsp<%=f.password_field :password,:required => true%>
-   
-
-      
-#            Re-Password:<%=f.password_field :conform_password,:required => true%>
-        
-
-        
-#            Contact No:&nbsp&nbsp&nbsp<%=f.text_field :contact_no,:required => true%>
-      
-
-       
-#           Address:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<%=f.text_field :address,:required => true%>
-      
-        
-#           Admin: <%=radio_button_tag :type, 'admin'%> </div>
-         
-#           Doctor: <%=radio_button_tag :type, 'doctor'%> </div>
-                    
-#           Patient: <%=radio_button_tag :type, 'patient'%>
-
-#         </div>
-#       <div class="modal-footer d-flex justify-content-center">
-#         <button class="btn btn-primary" onclick="return validation();">Send</button>
-#       </div>
-#     </div>
-#   </div>
-# </div>     
-# <%end%>
-# <script type="text/javascript">
-# function validation() {
-#     var password = document.getElementById('user_password').value;
-#     var conform = document.getElementById('user_conform_password').value;
-#     if (password!=conform) {
-#       alert("Please Correct Password");
-#       return false;
-#     } else {
-#       return true;
-#     }
-# }
-# </script> -->
