--- a/public/stylesheets/simple-sidebar.css
+++ b/public/stylesheets/simple-sidebar.css
@@ -103,3 +103,20 @@ body {
     margin-bottom: 1rem;
     color: #212529;
 }
+.card {
+     overflow: hidden;
+     position: absolute;
+     margin-left: 52%;
+     margin-top: 2%;
+     border: 1px solid black;
+     width: 250px;
+
+}
+.card-footer {
+     border: none;
+     background: none;
+     width: 250px;
+}
+.card-body {
+     padding: 1px ; 
+}
